# libtextwrap

./: Changelog  Makefile.am  Makefile.in  README  aclocal.m4  bootstrap  config.h.in  configure  configure.in  dotextwrap.1  dotextwrap.c  textwrap.3  textwrap.c  textwrap.h
CVS/: Entries  Repository  Root
debian/: changelog  control  libtextwrap-dev.install  libtextwrap1-udeb.install  libtextwrap1.install  not-installed  rules
debian/patches/: 0001-Debian-bug-237630-error-in-string.patch  0002-makefile-dependencies.patch  0003-textwrap-memory-leak.patch  series
sample/: testprog.pl
sample/CVS/: Entries  Repository
