#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(libtextwrap, 0.01, kubota@debian.org)
AC_CONFIG_AUX_DIR(config)
#AC_CONFIG_SRCDIR(textwrap.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(libtexrwrap, 0.01)

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB
AM_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(langinfo.h locale.h stdlib.h string.h wchar.h)

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS(mblen nl_langinfo setlocale strstr wcwidth)

AC_CONFIG_FILES(Makefile)
AC_OUTPUT
